--- a/css/eric-test-css.less
+++ b/css/eric-test-css.less
@@ -1,18 +1,26 @@
 @import "base.less";
+@import "normalize.less";
 
+
+
+.head_container {
+    width: 900px;
+    height: 300px;
+    background-position: center top;   
+}
 
 
 
 .first_page_button {
 	.rounded-corners;
-	width: 300px;
-	height: 300px;
+	width: 285px;
+	height: 285px;
 	color: @FONT_COLOR;
     background-color: @MEDIUM_BLUE;
     font-family: @MAIN_FONT;
     border: 1px solid #666;
     opacity: @ICON_OPACITY;
-
+    float: left;
     
     margin-bottom: 15px;
     margin-top: 15px;
