--- a/css/eric-test-css.less
+++ b/css/eric-test-css.less
@@ -2,11 +2,20 @@
 @import "normalize.less";
 
 
+.whole_container {
+    .container;
+
+}
+
 
 .head_container {
-    width: 900px;
-    height: 300px;
-    background-position: center top;   
+    .container;
+   
+    padding-top: 50px;
+    text-align: center;
+    
+    
+
 }
 
 
