--- a/css/eric-test-css.less
+++ b/css/eric-test-css.less
@@ -1,6 +1,60 @@
 @import "base.less";
 @import "normalize.less";
 
+#first_page_photoshop {
+    .rounded-corners;
+    width: 285px;
+    height: 285px;
+    color: @FONT_COLOR;
+    background-color: @MEDIUM_BLUE;
+    font-family: @MAIN_FONT;
+    border: 1px solid #666;
+    opacity: @ICON_OPACITY;
+    float: left;
+    
+ 
+  
+
+       
+}
+
+#first_page_photoshop_back {
+    .rounded-corners;
+    width: 285px;
+    height: 285px;
+    color: @FONT_COLOR;
+    background-color: @MEDIUM_BLUE;
+    font-family: @MAIN_FONT;
+    border: 1px solid #666;
+    opacity: 0.3;
+    float: left;
+    
+
+
+      
+}
+
+
+.play {
+
+   // a:link    { color: white };  /* unvisited links */
+   //a:visited { color: white }; /* visited links   */
+    //a:hover   { color: #00c };  /* user hovers     */
+   // a:active  { color: #ccc };  /* active links    */
+    position: fixed;
+    top: 36%;
+    left: 36%;
+    
+    font-family: @MAIN_FONT;
+    color: white;
+
+    font-size: 60px;
+}
+
+
+
+
+
 
 .whole_container {
     .container;
@@ -39,6 +93,8 @@
 
       &:hover {
         background-color: @LIGHT_BLUE;
+        opacity: 0.5;
+        
 
       
     }    
@@ -54,4 +110,66 @@
 
 }
 
+.dark_shadow{
+    width: 285px;
+    height: 285px;
+    opacity: 0.5;
 
+}
+
+
+
+
+
+
+
+
+
+
+/* entire container, keeps perspective */
+.flip-container {
+    perspective: 1000;
+    float: left;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+    /* flip the pane when hovered */
+    .flip-container:hover .flipper, .flip-container.hover .flipper {
+       
+        transform: rotateY(180deg);
+    }
+
+.flip-container, .front, .back {
+
+    width: 285px;
+    height: 285px;
+}
+
+/* flip speed goes here */
+.flipper {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+
+    position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+    backface-visibility: hidden;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+    z-index: 2;
+}
+
+/* back, initially hidden pane */
+.back {
+    transform: rotateY(180deg);
+}
