--- a/css/eric-test-css.less
+++ b/css/eric-test-css.less
@@ -35,6 +35,46 @@
 }
 
 
+#first_page_plus {
+    .rounded-corners;
+    width: 285px;
+    height: 285px;
+    color: @FONT_COLOR;
+    background-color: @MEDIUM_BLUE;
+    font-family: @MAIN_FONT;
+    border: 1px solid #666;
+    opacity: @ICON_OPACITY;
+    float: left;
+    
+ 
+  
+
+       
+}
+
+#first_page_plus_back {
+    .rounded-corners;
+    width: 285px;
+    height: 285px;
+    color: @FONT_COLOR;
+    background-color: @MEDIUM_BLUE;
+    font-family: @MAIN_FONT;
+    border: 1px solid #666;
+    opacity: 0.3;
+    float: left;
+    
+
+
+      
+}
+
+#logo2 {
+    width: 334px;
+    height: 200px;
+}
+
+
+
 .play {
 
    // a:link    { color: white };  /* unvisited links */
