--- a/css/base.less
+++ b/css/base.less
@@ -96,7 +96,7 @@ a:active {color:white;text-decoration:none;}
     margin-top: 10px;
     //margin-right:50px;
     min-height: 400px;
-    float:right;
+    float:left;
 }
 
 #logo {
@@ -188,6 +188,17 @@ a:active {color:white;text-decoration:none;}
         opacity: .8; 
         cursor: pointer;
     }
+}
+
+.new_shortcut {
+    .icon_selector;
+    background: url('../icons/plus.png') repeat center;
+}
+
+#add-new-shortcut {
+    position: absolute;
+    bottom: 10px;
+    right: 17px;
 }
 
 .score {
