--- a/css/base.less
+++ b/css/base.less
@@ -99,6 +99,10 @@ a:active {color:white;text-decoration:none;}
     float:left;
 }
 
+#add_shortcut_form {
+
+}
+
 #logo {
     width: 200px;
     height: 60px;
