Add shortcuts works! cleaned up some files as well

--- a/css/base.less
+++ b/css/base.less
@@ -100,7 +100,7 @@ a:active {color:white;text-decoration:none;}
 }
 
 #add_shortcut_form {
-
+    
 }
 
 #logo {
@@ -196,7 +196,8 @@ a:active {color:white;text-decoration:none;}
 
 .new_shortcut {
     .icon_selector;
-    background: url('../icons/plus.png') repeat center;
+    border-color: black;
+    background-image: url('../icons/plus_blue.png');
 }
 
 #add-new-shortcut {
