--- a/css/normalize.less
+++ b/css/normalize.less
@@ -256,7 +256,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 ================================================== */
 
     .container                                  { position: relative; width: (@column+@gutter) * @numcolumns; margin: 0 auto; padding: 0; }
-	.container.plusfour                         { position: relative; swidth: (@column+@gutter) * (@numcolumns+4); }
+	.container.plusfour                         { position: relative; width: (@column+@gutter) * (@numcolumns+4); }
 	.container.pluseight                        { width: (@column+@gutter) * (@numcolumns+8); }
     .column, .columns                           { float: left; display: inline; margin-left: (@gutter / 2)!important; margin-right: (@gutter / 2)!important; }
     .row                                        { margin-bottom: @gutter; }
