make textbox1 into class (instead of id)

--- a/css/create-app.less
+++ b/css/create-app.less
@@ -87,7 +87,7 @@ float: left;
    }
 
 
-#textbox1 
+.textbox1 
 { 
 border: 2px solid rgb(173, 204, 204); 
 height: 31px; 
@@ -97,7 +97,7 @@ transition:500ms all ease;
 padding:3px 3px 3px 3px; 
 } 
  
-#textbox1:hover, #textbox1:focus 
+.textbox1:hover, .textbox1:focus 
 { 
 width:200px; 
 transition:500ms all ease; 
