--- a/css/base.less
+++ b/css/base.less
@@ -99,10 +99,6 @@ a:active {color:white;text-decoration:none;}
     float:left;
 }
 
-#add_shortcut_form {
-    
-}
-
 #logo {
     width: 200px;
     height: 60px;
@@ -267,47 +263,89 @@ a:active {color:white;text-decoration:none;}
 }
 
 .reveal-modal-bg { 
-		position: fixed; 
-		height: 100%;
-		width: 100%;
-		background: #000;
-		background: rgba(0,0,0,.8);
-		z-index: 100;
-		display: none;
-		top: 0;
-		left: 0; 
-		}
+    position: fixed; 
+    height: 100%;
+    width: 100%;
+    background: #000;
+    background: rgba(0,0,0,.8);
+    z-index: 100;
+    display: none;
+    top: 0;
+    left: 0; 
+}
 	
-	.reveal-modal {
-		visibility: hidden;
-		top: 100px; 
-		left: 50%;
-		margin-left: -300px;
-		width: 520px;
-		position: absolute;
-		z-index: 101;
-		padding: 20px;
-		-moz-border-radius: 5px;
-		-webkit-border-radius: 5px;
-		border-radius: 5px;
-		-moz-box-shadow: 0 0 10px rgba(0,0,0,.4);
-		-webkit-box-shadow: 0 0 10px rgba(0,0,0,.4);
-		-box-shadow: 0 0 10px rgba(0,0,0,.4);
-		}
+.reveal-modal {
+    visibility: hidden;
+    top: 100px; 
+    left: 50%;
+    margin-left: -300px;
+    width: 520px;
+    position: absolute;
+    z-index: 101;
+    padding: 20px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -moz-box-shadow: 0 0 10px rgba(0,0,0,.4);
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.4);
+    -box-shadow: 0 0 10px rgba(0,0,0,.4);
+}
 		
-	.reveal-modal.small 		{ width: 200px; margin-left: -140px;}
-	.reveal-modal.medium 		{ width: 400px; margin-left: -240px;}
-	.reveal-modal.large 		{ width: 600px; margin-left: -340px;}
-	.reveal-modal.xlarge 		{ width: 800px; margin-left: -440px;}
+.reveal-modal.small 		{ width: 200px; margin-left: -140px;}
+.reveal-modal.medium 		{ width: 400px; margin-left: -240px;}
+.reveal-modal.large 		{ width: 600px; margin-left: -340px;}
+.reveal-modal.xlarge 		{ width: 800px; margin-left: -440px;}
 	
-	.reveal-modal .close-reveal-modal {
-		font-size: 22px;
-		line-height: .5;
-		position: absolute;
-		top: 8px;
-		right: 11px;
-		color: #aaa;
-		text-shadow: 0 -1px 1px rbga(0,0,0,.6);
-		font-weight: bold;
-		cursor: pointer;
-		} 
+.reveal-modal .close-reveal-modal {
+    font-size: 22px;
+    line-height: .5;
+    position: absolute;
+    top: 8px;
+    right: 11px;
+    color: #aaa;
+    text-shadow: 0 -1px 1px rbga(0,0,0,.6);
+    font-weight: bold;
+    cursor: pointer;
+} 
+
+.app-modal {
+    top: -213px;
+    background-color:#0f1215;
+    form {
+        width:285px;
+        margin: 20px auto;
+    }
+
+    input {
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        border:1px solid #ccc;
+        font-size:20px;
+        width:285px;
+        min-height:30px;
+        display:block;
+        margin-bottom:15px;
+        margin-top:5px;
+        outline: none;
+
+        -webkit-border-radius:5px;
+        -moz-border-radius:5px;
+        -o-border-radius:5px;
+        -ms-border-radius:5px;
+        border-radius:5px;
+    }
+}
+
+#app_image_preview { 
+    background-color: #777; 
+    width: 285px; 
+    min-height: 285px; 
+    margin: 20px auto; }
+
+#app_image_preview img { 
+    display: block; margin: 0px auto; }
+
+#app_image_preview p { 
+    margin: 10px; 
+    font-size: 14px; }
+
+
