--- a/css/base.less
+++ b/css/base.less
@@ -318,7 +318,7 @@ a:active {color:white;text-decoration:none;}
 
     input {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        border:1px solid #ccc;
+        // border:1px solid #ccc;
         font-size:20px;
         width:285px;
         min-height:30px;
@@ -327,11 +327,15 @@ a:active {color:white;text-decoration:none;}
         margin-top:5px;
         outline: none;
 
-        -webkit-border-radius:5px;
-        -moz-border-radius:5px;
-        -o-border-radius:5px;
-        -ms-border-radius:5px;
-        border-radius:5px;
+        // -webkit-border-radius:5px;
+        // -moz-border-radius:5px;
+        // -o-border-radius:5px;
+        // -ms-border-radius:5px;
+        // border-radius:5px;
+    }
+    #result {
+        width: 285px;
+        margin: 20px auto;
     }
 }
 
