scrap.php and better style

--- a/css/create-app.less
+++ b/css/create-app.less
@@ -40,21 +40,13 @@ float: left;
 
 .textbox_container1{
 	float: left;
-	width: 265px;
-
-}
-
-.textbox_container2{
-	float: left;
-	width: 265px;
-
-}
-.textbox_container3{
+	width: 250px;
 
 }
 
 
-.browse_button {
+
+.interactive_button {
    border-top: 1px solid #96d1f8;
    background: #000000;
    background: -webkit-gradient(linear, left top, left bottom, from(#2eabff), to(#000000));
@@ -76,12 +68,12 @@ float: left;
    text-decoration: none;
    vertical-align: middle;
    }
-.browse_button:hover {
+.interactive_button:hover {
    border-top-color: #3999d4;
    background: #3999d4;
    color: #ffffff;
    }
-.browse_button:active {
+.interactive_button:active {
    border-top-color: #1b435e;
    background: #1b435e;
    }
@@ -89,22 +81,47 @@ float: left;
 
 .textbox1 
 { 
-border: 2px solid rgb(173, 204, 204); 
+border: 2px solid rgb(0, 0, 0); 
 height: 31px; 
-width: 150px; 
-box-shadow: 0px 0px 20px rgb(204, 204, 204) inset; 
+width: 100px; 
+box-shadow: 0px 0px 20px rgb(0, 0, 0) inset; 
 transition:500ms all ease; 
 padding:3px 3px 3px 3px; 
 } 
  
 .textbox1:hover, .textbox1:focus 
 { 
-width:200px; 
+width:150px; 
 transition:500ms all ease; 
 background: url('../icons/plus_blue.png') no-repeat right; 
 background-size:25px 25px; 
 background-position:96% 62%; 
 padding:3px 32px 3px 3px; 
+color: white;
+} 
+
+
+
+
+.textbox.short
+{ 
+border: 2px solid rgb(0, 0, 0); 
+height: 31px; 
+width: 50px; 
+box-shadow: 0px 0px 20px rgb(0, 0, 0) inset; 
+transition:500ms all ease; 
+padding:3px 3px 3px 3px; 
+} 
+ 
+.textbox.short:hover, .textbox.short:focus 
+{ 
+width:50px; 
+transition:500ms all ease; 
+background: url('../icons/plus_blue.png') no-repeat right; 
+background-size:25px 25px; 
+background-position:96% 62%; 
+padding:3px 32px 3px 3px; 
+color: white;
 } 
 
 
