--- a/css/eric-test-css.less
+++ b/css/eric-test-css.less
@@ -115,7 +115,19 @@
 
 .flip-container, .front, .back {
     width: 285px;
-    height: 285px;
+    height: 350px;
+    position: relative;
+    
+    h2 {
+        position: absolute;
+        bottom: 0px;
+    }
+
+    .plays {
+        position: absolute;
+        bottom: 7px;
+        right: 0px;
+    }
 }
 
 /* flip speed goes here */
