--- a/css/create-app.less
+++ b/css/create-app.less
@@ -40,7 +40,7 @@ float: left;
 
 .textbox_container1{
 	float: left;
-	width: 250px;
+	width: 200px;
 
 }
 
@@ -111,6 +111,8 @@ width: 50px;
 box-shadow: 0px 0px 20px rgb(0, 0, 0) inset; 
 transition:500ms all ease; 
 padding:3px 3px 3px 3px; 
+font-size: 12px;
+float: left;
 } 
  
 .textbox.short:hover, .textbox.short:focus 
@@ -122,6 +124,7 @@ background-size:25px 25px;
 background-position:96% 62%; 
 padding:3px 32px 3px 3px; 
 color: white;
+float: left;
 } 
 
 
