--- a/css/create-app.less
+++ b/css/create-app.less
@@ -33,14 +33,15 @@ float: left;
 
 	color: white;
 	font-family: @SUB_FONT;
-	font-size: 25px;
+	font-size: 20px;
 	
 }
 
 
 .textbox_container1{
 	float: left;
-	width: 200px;
+	width: 170px;
+  height: 200px;
 
 }
 
@@ -91,7 +92,7 @@ padding:3px 3px 3px 3px;
  
 .textbox1:hover, .textbox1:focus 
 { 
-width:150px; 
+width:110px; 
 transition:500ms all ease; 
 background: url('../icons/plus_blue.png') no-repeat right; 
 background-size:25px 25px; 
