--- a/css/create-app.less
+++ b/css/create-app.less
@@ -229,3 +229,101 @@ float: left;
 #cssmenu p {
   clear: left;
 }
+
+// leaderboard css
+
+.Leaderboard {
+  margin:0px;padding:0px;
+  width:100%;
+  box-shadow: 10px 10px 5px #888888;
+  border:1px solid #ffffff;
+  
+  -moz-border-radius-bottomleft:13px;
+  -webkit-border-bottom-left-radius:13px;
+  border-bottom-left-radius:13px;
+  
+  -moz-border-radius-bottomright:13px;
+  -webkit-border-bottom-right-radius:13px;
+  border-bottom-right-radius:13px;
+  
+  -moz-border-radius-topright:13px;
+  -webkit-border-top-right-radius:13px;
+  border-top-right-radius:13px;
+  
+  -moz-border-radius-topleft:13px;
+  -webkit-border-top-left-radius:13px;
+  border-top-left-radius:13px;
+}.Leaderboard table{
+    border-collapse: collapse;
+        border-spacing: 0;
+  width:100%;
+  height:100%;
+  margin:0px;padding:0px;
+}.Leaderboard tr:last-child td:last-child {
+  -moz-border-radius-bottomright:13px;
+  -webkit-border-bottom-right-radius:13px;
+  border-bottom-right-radius:13px;
+}
+.Leaderboard table tr:first-child td:first-child {
+  -moz-border-radius-topleft:13px;
+  -webkit-border-top-left-radius:13px;
+  border-top-left-radius:13px;
+}
+.Leaderboard table tr:first-child td:last-child {
+  -moz-border-radius-topright:13px;
+  -webkit-border-top-right-radius:13px;
+  border-top-right-radius:13px;
+}.Leaderboard tr:last-child td:first-child{
+  -moz-border-radius-bottomleft:13px;
+  -webkit-border-bottom-left-radius:13px;
+  border-bottom-left-radius:13px;
+}.Leaderboard tr:hover td{
+  
+}
+.Leaderboard tr:nth-child(odd){ background-color:#e5e5e5; }
+.Leaderboard tr:nth-child(even)    { background-color:#ffffff; }.Leaderboard td{
+  vertical-align:middle;
+  
+  
+  border:1px solid #ffffff;
+  border-width:0px 1px 1px 0px;
+  text-align:center;
+  padding:12px;
+  font-size:14px;
+  font-family:Arial;
+  font-weight:normal;
+  color:#000000;
+}.Leaderboard tr:last-child td{
+  border-width:0px 1px 0px 0px;
+}.Leaderboard tr td:last-child{
+  border-width:0px 0px 1px 0px;
+}.Leaderboard tr:last-child td:last-child{
+  border-width:0px 0px 0px 0px;
+}
+.Leaderboard tr:first-child td{
+    background:-o-linear-gradient(bottom, #ffe500 5%, #fffbe8 100%);  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffe500), color-stop(1, #fffbe8) );
+  background:-moz-linear-gradient( center top, #ffe500 5%, #fffbe8 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffe500", endColorstr="#fffbe8");  background: -o-linear-gradient(top,#ffe500,fffbe8);
+
+  background-color:#ffe500;
+  border:0px solid #ffffff;
+  text-align:center;
+  border-width:0px 0px 1px 1px;
+  font-size:16px;
+  font-family:Arial;
+  font-weight:bold;
+  color:#000000;
+}
+.Leaderboard tr:first-child:hover td{
+  background:-o-linear-gradient(bottom, #ffe500 5%, #fffbe8 100%);  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffe500), color-stop(1, #fffbe8) );
+  background:-moz-linear-gradient( center top, #ffe500 5%, #fffbe8 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffe500", endColorstr="#fffbe8");  background: -o-linear-gradient(top,#ffe500,fffbe8);
+
+  background-color:#ffe500;
+}
+.Leaderboard tr:first-child td:first-child{
+  border-width:0px 0px 1px 0px;
+}
+.Leaderboard tr:first-child td:last-child{
+  border-width:0px 0px 1px 1px;
+}
