--- a/css/create-app.less
+++ b/css/create-app.less
@@ -3,9 +3,18 @@
 
 
 
-.create_app_header{
+// .create_app_header{
 
-	padding-top: 50px;
+// 	padding-top: 50px;
+//     text-align: center;
+//     font-family: @MAIN_FONT;
+//     color: white;
+//     font-size: 80px;
+// }
+
+.header{
+
+  padding-top: 50px;
     text-align: center;
     font-family: @MAIN_FONT;
     color: white;
@@ -297,7 +306,11 @@ ul#leaderboard li a:hover {border-left:0.4em solid #fe3;
 
   font-size: 50px;
   font-family: @LIGHT_BLUE;
-  text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    width: 10em;
   animation:blink_text 4s linear 2s infinite alternate;
   /* Safari and Chrome: */
   -webkit-animation:blink_text 4s linear 2s infinite alternate;
@@ -332,7 +345,12 @@ font-size: 80px;
 -webkit-animation: rotateAnimation 0.8476s 1 ease, blink_text 4s linear 2s infinite alternate; 
 -moz-animation: rotateAnimation 0.8476s 1 ease, blink_text 4s linear 2s infinite alternate;
 -o-animation: rotateAnimation 0.8476s 1 ease, blink_text 4s linear 2s infinite alternate;
-text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    width: 6em;
+
 
 
 }
@@ -354,9 +372,9 @@ to {  -moz-transform: rotate(0deg) scale(1)  }
 
 
 #highscore{
-  position: fixed;
-  top: 300px;
-  left: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 6em;
 
 }
 
